--- a/demo.ipynb
+++ b/demo.ipynb
@@ -5,14 +5,29 @@
    "metadata": {},
    "source": [
     "# Kaggle MCP Server Demo\n",
-    "This notebook demonstrates how to use the Kaggle MCP Server to interact with Kaggle datasets and competitions."
+    "This notebook demonstrates how to use the Kaggle MCP Server to interact with Kaggle datasets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1f97d30034804413b3d47e3c3403c7b1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Tab(children=(VBox(children=(Text(value='', description='Query:', placeholder='Enter search terms'), Button(de…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Import the Kaggle MCP Notebook interface\n",
     "\n",
@@ -52,20 +67,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    " # Get dataset info with sample data\n",
-    "dataset_info = client.get_dataset_info(\"rohanrao/formula-1-world-championship-1950-2020\", include_sample=True)\n",
-    " \n",
-    "# Convert sample data to DataFrame\\n\",\n",
-    "if \"sample_data\" in dataset_info[\"message\"][\"context\"]:\n",
-    "        sample_df = pd.DataFrame(dataset_info[\"message\"][\"context\"][\"sample_data\"]),\n",
-    "        display(sample_df)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -83,5 +90,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
